overflowing  "add item" form issue fixed

--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,16 @@
 body {
+    display: flex;
+    flex-direction: column;
     max-width: 700px;
     height: 720px;
     margin: auto;
     font-family: 'Roboto', sans-serif;
+}
+
+@media (max-height: 720px) {
+    body {
+        height: 100vh;
+    }
 }
 
 .root {
