--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -6,4 +6,5 @@
   border-radius: 9px;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
   padding: 32px;
+  overflow: auto;
 }
